@@ -19,16 +19,30 @@ public class FFMpeg {
     private static final SecureRandom random = new SecureRandom();
     private static final Logger logger = LoggerFactory.getLogger(FFMpeg.class);
 
+    // nem töröl
     public int test1() throws ExecutionException, InterruptedException {
 
-        String command = "ffmpeg -y -i uploads/sound.wav -b:a 192K -vn kimeneti.mp3";
+        String outputFileName = "output_" + UUID.randomUUID() + ".mp3";
+        String command = String.format("ffmpeg -y -i uploads/sound_4mp.wav -b:a 192K -vn %s", outputFileName);
 
         try {
-            Process process = Runtime.getRuntime().exec(command);
+            ProcessBuilder builder = new ProcessBuilder("bash", "-c", command);
+            Process process = builder.start();
 
             // Várj a parancs befejezésére
             int exitCode = process.waitFor();
-            System.out.println("A parancs befejezve kód: " + exitCode);
+            System.out.println("A parancs test1 befejezve kód: " + exitCode);
+
+            // Ha a folyamat sikeresen lefutott, töröljük a fájlt
+            if (exitCode == 0) {
+                File outputFile = new File(outputFileName);
+                if (outputFile.exists()) {
+                    boolean deleted = outputFile.delete();
+                    if (!deleted) {
+                        logger.error("test1 - Nem sikerült törölni a fájlt: " + outputFileName);
+                    }
+                }
+            }
 
             return exitCode;
 
@@ -38,35 +52,18 @@ public class FFMpeg {
         return -900;
     }
 
-    public int test3a() throws ExecutionException, InterruptedException {
-
-        try {
-
-            ProcessBuilder builder = new ProcessBuilder(
-                    // "bash", "-c", "cpulimit -l 10 -- ffmpeg -y -i uploads/sound.wav -b:a 192K -vn kimeneti.mp3"
-                    "cpulimit -l 10 -- ffmpeg -y -i uploads/sound.wav -b:a 192K -vn kimeneti.mp3"
-            );
-            Process process = builder.start();
-
-            // Várj a parancs befejezésére
-            int exitCode = process.waitFor();
-            System.out.println("A parancs befejezve kód: " + exitCode);
-
-            return exitCode;
-
-        } catch (IOException | InterruptedException e) {
-            logger.error("/ffmpeg/test/3", e);
-        }
-        return -900;
-    }
-
+    // nem töröl
+    // ez jó megoldás
     public int test3() throws ExecutionException, InterruptedException {
+        // Egyedi fájlnév generálása UUID segítségével
+
+        int cpuLimit = 10;
+
+        String outputFileName = "output_" + UUID.randomUUID() + ".mp3";
+        String command = String.format("cpulimit -l %d -- ffmpeg -y -i uploads/sound_4mp.wav -b:a 192K -vn %s", cpuLimit, outputFileName);
 
         try {
-
-            ProcessBuilder builder = new ProcessBuilder(
-                    "bash", "-c", "cpulimit -l 10 -- ffmpeg -y -i uploads/sound.wav -b:a 192K -vn kimeneti.mp3"
-            );
+            ProcessBuilder builder = new ProcessBuilder("bash", "-c", command);
             Process process = builder.start();
 
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
@@ -81,6 +78,7 @@ public class FFMpeg {
             }
 
             int exitCode = process.waitFor();
+            System.out.println("A parancs test3 befejezve kód: " + exitCode);
 
             return exitCode;
 
@@ -90,11 +88,14 @@ public class FFMpeg {
         return -900;
     }
 
+    // töröl
+    // ez jó megoldás
     public int test3(int cpuLimit) throws ExecutionException, InterruptedException {
-        try {
-            // Dinamikusan létrehozott parancs a CPU limit alapján
-            String command = String.format("cpulimit -l %d -- ffmpeg -y -i uploads/sound.wav -b:a 192K -vn kimeneti.mp3", cpuLimit);
+        // Egyedi fájlnév generálása UUID segítségével
+        String outputFileName = "output_" + UUID.randomUUID() + ".mp3";
+        String command = String.format("cpulimit -l %d -- ffmpeg -y -i uploads/sound_4mp.wav -b:a 192K -vn %s", cpuLimit, outputFileName);
 
+        try {
             ProcessBuilder builder = new ProcessBuilder("bash", "-c", command);
             Process process = builder.start();
 
@@ -111,24 +112,7 @@ public class FFMpeg {
             }
 
             int exitCode = process.waitFor();
-            return exitCode;
-
-        } catch (IOException | InterruptedException e) {
-            logger.error("/ffmpeg/test/3", e);
-            return -900;
-        }
-    }
-    // Uj methodusok tesztelem öket elsősorban a cpu kihasználtság beállítását akarom kitesztelni vele.
-
-    public int test4() throws ExecutionException, InterruptedException {
-        // Egyedi fájlnév generálása UUID segítségével
-        String outputFileName = "output_" + UUID.randomUUID() + ".mp3";
-        String command = "cpulimit -l 10 -- ffmpeg -y -i uploads/sound.wav -b:a 192K -vn " + outputFileName;
-
-        try {
-            Process process = Runtime.getRuntime().exec(command);
-            int exitCode = process.waitFor();
-            System.out.println("A parancs befejezve kód: " + exitCode);
+            System.out.println("A parancs test3 befejezve kód: " + exitCode);
 
             // Ha a folyamat sikeresen lefutott, töröljük a fájlt
             if (exitCode == 0) {
@@ -136,8 +120,45 @@ public class FFMpeg {
                 if (outputFile.exists()) {
                     boolean deleted = outputFile.delete();
                     if (!deleted) {
-                        // System.err.println("Nem sikerült törölni a fájlt: " + outputFileName);
-                        logger.error("Nem sikerült törölni a fájlt: " + outputFileName);
+                        logger.error("test3 - Nem sikerült törölni a fájlt: " + outputFileName);
+                    }
+                }
+            }
+
+            return exitCode;
+
+        } catch (IOException | InterruptedException e) {
+            logger.error("/ffmpeg/test/3", e);
+            return -900;
+        }
+    }
+
+    // töröl
+    // rossz
+    // ha nem kapjuk el a kimenetet akkor korábban megszakad a program és az ffmpeg nem fut le
+    // ezt kijavítottam a test3() metodusban ami ugyan ezt csinálja de le is fut rendesen
+    public int test4() throws ExecutionException, InterruptedException {
+        // Egyedi fájlnév generálása UUID segítségével
+
+        int cpuLimit = 10;
+
+        String outputFileName = "output_" + UUID.randomUUID() + ".mp3";
+        String command = String.format("cpulimit -l %d -- ffmpeg -y -i uploads/sound_4mp.wav -b:a 192K -vn %s", cpuLimit, outputFileName);
+
+        try {
+            ProcessBuilder builder = new ProcessBuilder("bash", "-c", command);
+            Process process = builder.start();
+
+            int exitCode = process.waitFor();
+            System.out.println("A parancs test4 befejezve kód: " + exitCode);
+
+            // Ha a folyamat sikeresen lefutott, töröljük a fájlt
+            if (exitCode == 0) {
+                File outputFile = new File(outputFileName);
+                if (outputFile.exists()) {
+                    boolean deleted = outputFile.delete();
+                    if (!deleted) {
+                        logger.error("test4 - Nem sikerült törölni a fájlt: " + outputFileName);
                     }
                 }
             }
@@ -155,7 +176,7 @@ public class FFMpeg {
     // már van egy generateRanodmString függvényem amit az output nevének előállításához használok
     // ugyan ezt lehetne felhasználni arra is, hogy a mytext + ... filenevet előállítsam.
     public void createFile(String n) {
-        String textToWrite = "file 'uploads/sound.wav'\n";
+        String textToWrite = "file 'uploads/sound_4mp.wav'\n";
         String fileName = "mytext" + n + ".txt";
         int numberOfTimes = Integer.parseInt(n);
 
